k8s/wordpress.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  clusterIP: None
  ports:
  - port: 80
  selector:
    app.kubernetes.io/name: $SERVICE_NAME
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME
    spec:
      containers:
      - name: $SERVICE_NAME
        image: wordpress:$VERSION_WORDPRESS
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/etc/php/conf.d/local-php.ini
          name: init
          subPath: local-php.ini
        - mountPath: /var/www/html
          name: share
          subPath: $SERVICE_NAME/html
      dnsConfig:
        options:
        - name: use-vc
        - name: ndots
      volumes:
      - name: init
        configMap:
          name: $SERVICE_NAME
      - name: share
        hostPath: { path: $PATH_SHR }
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-$SERVICE_NAME
    hosts:
    - $HOST_FQDN
  rules:
  - host: $HOST_FQDN
    http:
      paths:
      - path: /
        backend:
          serviceName: $SERVICE_NAME
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-totp
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://$AUTHELIA_IP/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://authtotp.$DOMAIN
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - secretName: tls-$SERVICE_NAME
    hosts:
    - $HOST_FQDN
  rules:
  - host: $HOST_FQDN
    http:
      paths:
      - path: /(wp-login.php|wp-admin)
        backend:
          serviceName: $SERVICE_NAME
          servicePort: 80
